--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
   - title: "Presentations"
     url: "/#-presentations"
 
-  - title: "Educations"
+  - title: "Education"
     url: "/#-educations"
 
   - title: "Awards & Fellowships"
