--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@ main:
   - title: "Education"
     url: "/#-education"
 
-  - title: "Awards & Fellowships"
+  - title: "Awards and Fellowships"
     url: "/#-awards-and-fellowships"
 
   - title: "Affiliations"
