--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Nusrat Munia"
   avatar           : "images/profile_photo.jpeg"
-  bio              : "University of Kentucky"
+  bio              : "CS Phd Candidate<br>University of Kentucky"
   location         : "Lexington, KY, USA"
   employer         :
   pubmed           : 
